2002-10-24  Rajesh Vaidheeswarran  <rvgnu@usw-pr-shell1.sourceforge.net>

	* (p4-version): Update to 10.2 for release

2002-10-03  Peter Osterlund  <petero2@telia.com>

	* (p4-blame-int): Also include file revisions before a deleted
	  revision in the blame computation.

2002-10-02  Peter Osterlund  <petero2@telia.com>

	* (p4-blame-int): Bail out early instead of generating garbage if
	  invoked with a non-existing file revision.

	* (p4-blame-int): Set the 'link-depot-name character property
	  instead of 'file. This makes all places that use
	  p4-buffer-file-name-2 do the right thing automatically.

	* (p4-blame-int): Use change numbers instead of revision numbers
	  as keys when looking up data in ch-alist. Revision numbers are
	  not unique when more than one file is involved.

2002-10-01  Peter Osterlund  <petero2@telia.com>

	* (p4-blame-int): Use correct filename when initializing the
	  "p4-ch-buf" buffer.

	* (p4-font-lock-buffer): Made fontification more robust. Some
	  versions of emacs failed if you tricked them to fontify a binary
	  file.

2002-09-29  Peter Osterlund  <petero2@telia.com>

	* (p4-find-change-numbers): Handle the case "submit @1234" when
	  searching for change numbers in change descriptions.

2002-09-24  Peter Osterlund  <petero2@telia.com>

	* p4.el.html: Added documentation for the different key maps used
	  by p4.el.

	* (p4-font-lock-buffer): Fixed problem with delays when pressing
	  C-l caused by hilit19 unnecessarily trying to rehighlight the
	  buffer.

2002-09-23  Peter Osterlund  <petero2@telia.com>

	* (p4-font-lock-buffer): New function. Colorize a buffer using
	  font-lock mode.
	* (p4-activate-print-buffer): Use p4-font-lock-buffer.
	* (p4-print-with-rev-history-int): Use p4-font-lock-buffer.

2002-09-22  Peter Osterlund  <petero2@telia.com>

	* (p4-print-with-rev-history-int): Fixed misaligned header text.

	* (p4-print-rev-map): Add 'l' key to toggle line wrap mode.